--- a/fetch-data/Cargo.toml
+++ b/fetch-data/Cargo.toml
@@ -11,4 +11,5 @@ airq = { path = "../airq-lib" }
 serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0.57"
 toml = "0.5.6"
-clap = "3.0.0-beta.1"
+sqlx = { version = "0.4.0-beta.1", features = ["postgres"] }
+async-std = { version = "1.6.2", features = ["attributes"] }
