--- a/airq-lib/Cargo.toml
+++ b/airq-lib/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+blocking = ["reqwest/blocking"]
+
 [dependencies]
-reqwest = { version = "0.10.7", features = ["json", "blocking"] }
+reqwest = { version = "0.10.7", features = ["json"] }
 serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0.57"
 base64 = "0.12.3"
