--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rocket = { git = "https://github.com/SergioBenitez/Rocket" }
+sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "postgres"] }
+tokio = "0.2.22"
+airq = { path = "../airq-lib" }
