--- a/fetch-data/Cargo.toml
+++ b/fetch-data/Cargo.toml
@@ -13,3 +13,5 @@ serde_json = "1.0.57"
 toml = "0.5.6"
 sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "postgres"] }
 tokio = "0.2.22"
+futures = "0.3.5"
+thiserror = "1.0.20"
