--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+fetch-data = { path = "../fetch-data" }
 rocket = { git = "https://github.com/SergioBenitez/Rocket" }
+rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
 sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "postgres"] }
 tokio = "0.2.22"
 airq = { path = "../airq-lib" }
+serde = { version = "1.0.114", features = ["derive"] }
+futures = "0.3.5"
