--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,3 +15,4 @@ tokio = "0.2.22"
 airq = { path = "../airq-lib" }
 serde = { version = "1.0.114", features = ["derive"] }
 futures = "0.3.5"
+lazy_static = "1.4.0"
