--- a/fetch-data/Cargo.toml
+++ b/fetch-data/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 
 [dependencies]
 airq = { path = "../airq-lib" }
-serde = { version = "1.0.114", features = ["derive"] }
-serde_json = "1.0.57"
-toml = "0.5.6"
-sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "postgres"] }
-tokio = "0.2.22"
-futures = "0.3.5"
-thiserror = "1.0.20"
+serde = { version = "1.0.123", features = ["derive"] }
+serde_json = "1.0.62"
+toml = "0.5.8"
+sqlx = { version = "0.5.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres"] }
+tokio = "1.2.0"
+futures = "0.3.12"
+thiserror = "1.0.23"
